[package]
name = "zeronsd"
version = "0.6.0-pre1"
authors = [
  "Erik Hollensbe <linux@hollensbe.org>",
  "Adam Ierymenko <adam.ierymenko@zerotier.com>",
  "Lennon Day-Reynolds <lennon@zerotier.com>"
]
description = "Unicast DNS resolver for ZeroTier networks"
homepage = "https://github.com/zerotier/zeronsd"
repository = "https://github.com/zerotier/zeronsd"
documentation = "https://github.com/zerotier/zeronsd/blob/main/README.md"
license = "BSD-3-Clause"
readme = "README.md"
keywords = ["dns", "zerotier"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
regex = "^1.11.0"
anyhow = "^1.0.89"
clap = { version = "^3", features = ["derive"] }
ipnetwork = "^0.20.0"
trust-dns-client = { version = "^0.22", features = ["dns-over-openssl"] }
trust-dns-resolver = { version = "^0.22", features = ["tokio-runtime", "dns-over-openssl"] }
trust-dns-server = { version = "^0.22", features = ["dns-over-openssl"] }
trust-dns-proto = "^0.22"
tokio = { version = "1", features = ["full"] }
serde = "^1.0.210"
serde_json = "^1.0.128"
serde_yml = "^0.0.12"
zerotier-central-api = { path = "../central-api" }
zerotier-service-api = { path = "../service-api" }
toml = "^0.7.8"
tinytemplate = "^1.2.1"
rand = "^0.8.5"
tracing = "^0.1.40"
tracing-log = "^0.2.0"
tracing-subscriber = "^0.3.18"
hex = "^0.4.3"
openssl = { version = "^0.10.55", features = ["v102", "v110"] }
async-trait = "^0.1.83"
lazy_static = "^1.5.0"
reqwest = "^0.12.8"

[features]
vendored-openssl = [ "openssl/vendored" ]

[dev-dependencies]
ctor = ">=0"

[package.metadata.deb.variants.ubuntu22]
features = [ "vendored-openssl" ]

[package.metadata.deb]
copyright = "ZeroTier, Inc"

extended-description = """
ZeroNS provides names that are a part of ZeroTier Central's
(https://my.zerotier.com) configured networks; once provided a network it:

- Listens on the local interface joined to that network -- you will want to
  start one ZeroNS per ZeroTier network.
- Provides general DNS by forwarding all queries to `/etc/resolv.conf`
  resolvers that do not match the TLD, similar to `dnsmasq`.
- Tells Central to point all clients that have the "Manage DNS" settings turned
  **on** to resolve to it.
- Finally, sets a provided TLD (`.home.arpa` is the default), as well as
  configuring `A` (IPv4) and `AAAA` (IPv6) records for:
  - Member IDs: `zt-<memberid>.<tld>` will resolve to the IPv4/v6 addresses for
    them.
  - Names: _if_ the names are compatible with DNS names, they will be converted
    as such: to `<name>.<tld>`.
    - Please note that **collisions are possible** and that it's _up to the
      admin to prevent them_.
"""

[package.metadata.generate-rpm]
assets = [ { source = "target/release/zeronsd", dest = "/usr/bin/zeronsd", mode = "755" } ]
features = [ "vendored-openssl" ]

[target.'cfg(windows)'.dependencies]
openssl = { version = ">=0", features = [ "vendored" ] }
