[package]
name = "zerotier-api"
version = "0.1.0"
edition = "2021"

[dependencies]
futures = "0.3.31"
progenitor-client = "0.8.0"
reqwest = "0.12.8"
serde = { version = "1.0.210", features = ["derive"] }
serde_json = "1.0.130"

[build-dependencies]
anyhow = "1.0.90"
prettyplease = "0.2.22"
progenitor = "0.8.0"
serde_json = "1.0.130"
syn = "2.0.79"
serde = { version = "1.0.210", features = ["derive"] }
