[package]
name = "zerotier-one-api"
version = "1.0.1"
edition = "2018"
description = "OpenAPI bindings to zerotier-one service"
authors = ["Erik Hollensbe <linux@hollensbe.org>", "Adam Ierymenko <adam.ierymenko@zerotier.com>"]
license = "BSD-3-Clause"

[dependencies]
serde = "^1.0"
serde_derive = "^1.0"
serde_json = "^1.0"
url = "^2.2"
[dependencies.reqwest]
version = "^0.11"
default-features = false
features = ["json", "multipart"]

[dev-dependencies]
